トークン生成のAPI作成
